@@ -11,8 +11,6 @@ ast2pt.cmo: $(OTOP)/parsing/asttypes.cmi $(OTOP)/parsing/location.cmi \
 ast2pt.cmx: $(OTOP)/parsing/asttypes.cmi $(OTOP)/parsing/location.cmx \
     $(OTOP)/parsing/longident.cmx mLast.cmi $(OTOP)/parsing/parsetree.cmi \
     ast2pt.cmi 
-crc.cmo: $(OTOP)/otherlibs/dynlink/dynlink.cmi 
-crc.cmx: $(OTOP)/otherlibs/dynlink/dynlink.cmx 
 pcaml.cmo: ast2pt.cmi mLast.cmi quotation.cmi reloc.cmi spretty.cmi pcaml.cmi 
 pcaml.cmx: ast2pt.cmx mLast.cmi quotation.cmx reloc.cmx spretty.cmx pcaml.cmi 
 quotation.cmo: mLast.cmi quotation.cmi 
