@@ -1,6 +1,6 @@
-odyl.cmo: odyl_config.cmo odyl_main.cmi 
-odyl.cmx: odyl_config.cmx odyl_main.cmx 
 odyl_main.cmo: $(OTOP)/otherlibs/dynlink/dynlink.cmi odyl_config.cmo \
     odyl_main.cmi 
 odyl_main.cmx: odyl_config.cmx \
     odyl_main.cmi 
+odyl.cmo: odyl_config.cmo odyl_main.cmi 
+odyl.cmx: odyl_config.cmx odyl_main.cmx 
